applications/soap-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soap-demo
  namespace: applications
  annotations:
    cert-manager.io/cluster-issuer: vault-pki-int
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - soap-demo.192.168.151.10.nip.io
      secretName: soap-demo-tls
  rules:
    - host: soap-demo.192.168.151.10.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: soap-demo
                port:
                  number: 80
